crates/markdown-neuraxis-syntax/src/snapshots/blocks/list_ordered_paren.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..43
  PARAGRAPH@0..43
    TEXT@0..1 "1"
    RPAREN@1..2 ")"
    WHITESPACE@2..3 " "
    TEXT@3..8 "First"
    WHITESPACE@8..9 " "
    TEXT@9..13 "item"
    NEWLINE@13..14 "\\n"
    TEXT@14..15 "2"
    RPAREN@15..16 ")"
    WHITESPACE@16..17 " "
    TEXT@17..23 "Second"
    WHITESPACE@23..24 " "
    TEXT@24..28 "item"
    NEWLINE@28..29 "\\n"
    TEXT@29..30 "3"
    RPAREN@30..31 ")"
    WHITESPACE@31..32 " "
    TEXT@32..37 "Third"
    WHITESPACE@37..38 " "
    TEXT@38..42 "item"
    NEWLINE@42..43 "\\n"
