crates/markdown-neuraxis-syntax/src/snapshots/blocks/pipe_not_table.snap
---
source: crates/markdown-neuraxis-syntax/src/lib.rs
expression: "insta_format_tree(&tree, 0)"
---
ROOT@0..94
  PARAGRAPH@0..45
    TEXT@0..4 "This"
    WHITESPACE@4..5 " "
    TEXT@5..7 "is"
    WHITESPACE@7..8 " "
    TEXT@8..9 "a"
    WHITESPACE@9..10 " "
    TEXT@10..19 "paragraph"
    WHITESPACE@19..20 " "
    TEXT@20..24 "with"
    WHITESPACE@24..25 " "
    TEXT@25..26 "a"
    WHITESPACE@26..27 " "
    PIPE@27..28 "|"
    WHITESPACE@28..29 " "
    TEXT@29..33 "pipe"
    WHITESPACE@33..34 " "
    TEXT@34..43 "character"
    DOT@43..44 "."
    NEWLINE@44..45 "\\n"
  NEWLINE@45..46 "\\n"
  PARAGRAPH@46..94
    PIPE@46..47 "|"
    WHITESPACE@47..48 " "
    TEXT@48..52 "Only"
    WHITESPACE@52..53 " "
    TEXT@53..59 "header"
    WHITESPACE@59..60 " "
    DASH@60..61 "-"
    WHITESPACE@61..62 " "
    TEXT@62..64 "no"
    WHITESPACE@64..65 " "
    TEXT@65..74 "delimiter"
    WHITESPACE@74..75 " "
    TEXT@75..78 "row"
    WHITESPACE@78..79 " "
    TEXT@79..81 "so"
    WHITESPACE@81..82 " "
    TEXT@82..85 "not"
    WHITESPACE@85..86 " "
    TEXT@86..87 "a"
    WHITESPACE@87..88 " "
    TEXT@88..93 "table"
    NEWLINE@93..94 "\\n"
